--- a/bhf-2025.markdown
+++ b/bhf-2025.markdown
@@ -11,8 +11,8 @@ title: BHF Events
 {% for event in site.data.bhf-events-2025 %}
   <p>
     <b>{{event.Date | date: "%a %-d %B %Y"}} at {{event.Times | date: "%H:%M" }}</b><br/>
-    <em>{{event.Event}} </em><br/>
+    <em>{{event.EventTitle}} </em><br/>
     {{event.LongDesc}}  
-    {{event.Venue}}
+    {{event.VenueAddress}}
   </p>
 {% endfor %}
