--- a/bhf-2025.markdown
+++ b/bhf-2025.markdown
@@ -10,10 +10,12 @@ title: Heritage Festival 2025
 
 {% for event in site.data.bhf-events-2025 %}
   <img src="images/bhf-mini.png" alt="Bradford Heritage Festival Logo">
+  <h3>{{event.Date | date: "%a %-d %B %Y"}} at {{event.Times | date: "%H:%M" }}</h3>
+  <h4>{{event.EventTitle}}</h4>
+  <p>    
+    {{event.LongDesc}}
+  </p>
   <p>
-    <b>{{event.Date | date: "%a %-d %B %Y"}} at {{event.Times | date: "%H:%M" }}</b><br/>
-    <em>{{event.EventTitle}} </em><br/>
-    {{event.LongDesc}}<br/>
     {{event.VenueAddress}}<br/>
     {{event.VenuePhone}}<br/>
     {{event.VenueWebsite}}<br/>
