--- a/bhf-2025.markdown
+++ b/bhf-2025.markdown
@@ -3,10 +3,8 @@
 # To modify the layout, see https://jekyllrb.com/docs/themes/#overriding-theme-defaults
 
 layout: page
-title: Heritage Festival 2025 
+title: Heritage Festival 2025 Events
 ---
-
-# Bradford Heritage Festival 2025 Events
 
 {% for event in site.data.bhf-events-2025 %}
   <img src="images/{{event.ImageName}}" alt="{{event.ImageDesc}} | Credit {{event.ImageCredit}}" style="float: left; height: 80px; margin-right: 20px; margin-bottom: 10px;">
@@ -16,9 +14,9 @@ title: Heritage Festival 2025
     {{event.LongDesc}}
   </p>
   <p>
-    {{event.VenueAddress}}<br/>
-    {{event.VenuePhone}}<br/>
-    {{event.VenueWebsite}}<br/>
+    <b>Venue:</b> {{event.VenueAddress}}<br/>
+    <b><Phone:/b> {{event.VenuePhone}}<br/>
+    <b>Website:</b> {{event.VenueWebsite}}<br/>
     {{event.Category1}} | {{event.Category2}}
   </p>
 {% endfor %}
