--- a/bhf-2025.markdown
+++ b/bhf-2025.markdown
@@ -15,7 +15,7 @@ title: Heritage Festival 2025 Events
   </p>
   <p>
     <b>Venue:</b> {{event.VenueAddress}}<br/>
-    <b><Phone:/b> {{event.VenuePhone}}<br/>
+    <b><Phone:</b> {{event.VenuePhone}}<br/>
     <b>Website:</b> {{event.VenueWebsite}}<br/>
     {{event.Category1}} | {{event.Category2}}
   </p>
