--- a/bhf-2025.markdown
+++ b/bhf-2025.markdown
@@ -4,8 +4,9 @@
 
 layout: page
 title: Heritage Festival 2025 Events
-image: images/festival-logo.png
 ---
+
+![Bradford Hertiage Festival 2025 logo](images/festival-logo.png)
 
 {% for event in site.data.bhf-events-2025 %}
   <img src="images/{{event.ImageName}}" alt="{{event.ImageDesc}} | Credit {{event.ImageCredit}}" style="float: left; height: 80px; margin-right: 20px; margin-bottom: 10px;">
