--- a/bhf-2025.markdown
+++ b/bhf-2025.markdown
@@ -13,7 +13,8 @@ title: Heritage Festival 2025 Events
   </p>
 </div>
 
-{% for event in site.data.bhf-events-2025 %}
+<div>
+  {% for event in site.data.bhf-events-2025 %}
   <img src="images/{{event.ImageName}}" alt="{{event.ImageDesc}} | Credit {{event.ImageCredit}}" style="float: left; height: 80px; margin-right: 20px; margin-bottom: 10px;">
   <h3>{{event.Date | date: "%a %-d %B %Y"}} at {{event.Times | date: "%H:%M" }}</h3>
   <h4>{{event.EventTitle}}</h4>
@@ -27,4 +28,5 @@ title: Heritage Festival 2025 Events
     {{event.Category1}} | {{event.Category2}}
   </p>
   <hr/>
+</div>
 {% endfor %}
