--- a/bhf-2025.markdown
+++ b/bhf-2025.markdown
@@ -13,7 +13,7 @@ title: Heritage Festival 2025 Events
   </p>
 </div>
 
-<div>
+<div style="display: block;">
   {% for event in site.data.bhf-events-2025 %}
   <img src="images/{{event.ImageName}}" alt="{{event.ImageDesc}} | Credit {{event.ImageCredit}}" style="float: left; height: 80px; margin-right: 20px; margin-bottom: 10px;">
   <h3>{{event.Date | date: "%a %-d %B %Y"}} at {{event.Times | date: "%H:%M" }}</h3>
